Cambio de controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=pruebatecnica
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.prometheus.enabled=true
